--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,17 @@ code {
 .list{
    background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);
 }
+.reportResponsive{
+  margin-bottom: 5%;
+}
+.responsiveApp{
+  margin-left: 5%;
+  background-color: #fff;
+  margin-bottom: 2%;
+}
+.serviceImage{
+  min-width: 320px!important;
+}
 }
 
 /* Homepage */
@@ -145,12 +156,17 @@ min-height: 600px;
 .bgImage1{
   margin-top: 5%;
   background-image: url(../src/assests/code4.png);
-  min-height: 600px;
+  min-height: 700px;
   }
   .bg{
     background: linear-gradient(45deg, rgba(156, 14, 156, 0.7), midnightblue);
     color: white;
     font-weight: bold;
   }
-
-
+  .todo {
+    cursor: pointer;
+    text-align: left;
+  }
+  .strike {
+    text-decoration: line-through;
+  }
